chore: avoid word wrap in the type label

--- a/packages/composer/amazeelabs/silverback_gutenberg/css/gutenberg-tweaks.css
+++ b/packages/composer/amazeelabs/silverback_gutenberg/css/gutenberg-tweaks.css
@@ -26,3 +26,8 @@ with cypress tests.*/
 .block-editor-link-control__search-item span.block-editor-link-control__search-item-title {
   white-space: normal;
 }
+
+/* Avoid word wrap in the type label. */
+.block-editor-link-control__search-item .block-editor-link-control__search-item-type {
+  white-space: pre;
+}
